High score problem is resolved